Fix bigup wrapping

--- a/src/Client/style.sass
+++ b/src/Client/style.sass
@@ -447,7 +447,7 @@ table.table th.text-left
 
   .gw-fixture-pred-row
     position: relative
-    top: -10px
+    top: -12px
 
   .gw-fixture-pred-container
     padding: 2px
@@ -612,6 +612,7 @@ table.table th.text-left
     background-color: $white
   .big-up-box-team
     font-weight: bold
+    white-space: nowrap
     text-transform: uppercase
     color: $primary
   .big-up-box-pred
